# file-service

./: alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
app/: config.py  db.py  main.py  models.py
app/storage/: base.py  local_storage.py
